# FfmpegTest

./: settings.gradle
app/: build.gradle
app/libs/arm64-v8a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/libs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/libs/x86/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/libs/x86_64/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/androidTest/java/com/ksw/ffmpegtest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/ksw/ffmpegtest/: App.kt  ArrayMerge.java  ChatManager.kt  DataReceiver.java  FFMPEG.kt  FFVideoPlayer.kt  FrameData.java  FrameRateController.java  IjkPlayer.java  MainActivity.kt  MediaPacket.java  MyDataReceiver.kt  SingleThreadExecutor.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/ksw/ffmpegtest/: ExampleUnitTest.kt
camera_mic_codec/: build.gradle
camera_mic_codec/src/main/: AndroidManifest.xml
camera_mic_codec/src/main/java/com/ehang/video_audio_codec/: CameraCodec.java  EhAudioCodec.java  OnErrorListener.java
camera_mic_codec/src/main/java/com/ehang/video_audio_codec/been/: CodecType.java  Resolution.java  VideoSettings.java
camera_mic_codec/src/main/java/com/isure/audio/: Speex.java
camera_mic_codec/src/main/res/values/: strings.xml
